<resources>
    <string name="app_name">商品溯源</string>
    <string name="mainToolbarTextView">商品溯源</string>
    <string name="myToolbarTextView">我的</string>
    <string name="storeToBlcokchain">商品存链</string>
    <string name="storeToBlcokchainResult">商品存链结果</string>
    <string name="goodsIdentification">商品鉴定</string>
    <string name="certificateGeneration">证书生成</string>
    <string name="identificationGoodsImage">商品图片:</string>
    <string name="identificationUploadGoodsImage">请上传商品图片</string>
    <string name="identificationResult">商品鉴定结果</string>
    <string name="identificationGoodsImageDetail">包装图片:</string>
    <string name="identificationUploadGoodsImageDetail">请上传包装图片</string>
    <string name="identificationGoodsImageUploaded">商品包装图片上传成功</string>
    <string name="identificationGoodsImageError">商品图片上传成功</string>
    <string name="identificationGoodsKey">商品序列号:</string>
    <string name="identificationInputGoodsKey">请输入商品序列号</string>
    <string name="identificationInputGoodsKeyError">商品序列号输入有误</string>
    <string name="identificationGoodsDescrible">商品描述:</string>
    <string name="identificationGoodsDescribleInput">请输入商品描述</string>
    <string name="netWorkError">网络超时，请重试</string>
    <string name="goodsIdentificationSuccess">恭喜您，商品鉴定成功！！！</string>
    <string name="goodsIdentificationError">对不起，字画鉴定失败！！！请您核对后重新提交</string>
    <string name="uploadImageAgain">请重新上传照片</string>
    <string name="goodsName">商品名称:</string>
    <string name="goodsNameInput">请输入商品名称</string>
    <string name="goodsTime">出厂日期:</string>
    <string name="goodsTimeInput">请输入商品出厂日期</string>
    <string name="companyName">生产厂商:</string>
    <string name="companyNameInput">请输入生产厂商</string>
    <string name="productionBatch">生产批次:</string>
    <string name="productionBatchInput">请输入生产批次</string>
    <!--<string name="goodsClassify">商品分类:</string>-->
    <!--<string name="goodsClassifyInput">请输入商品分类</string>-->
    <string name="goodsClassify">商品序列号:</string>
    <string name="goodsClassifyInput">请输入商品序列号</string>
    <string name="assetId_help">生成的字画的ID十分的重要，请您妥善保存，一定不要泄露给其他人！！长按下面的文字可复制</string>
    <string name="keyStoreUploaded">密钥文件已上传</string>
    <string name="storeError">存链失败，请重试</string>
    <string name="storeSuccess">恭喜您，存链成功</string>
    <string name="aboutUs">关于我们</string>
    <string name="toolbar_advices">意见反馈</string>
    <string name="edit_advice">对不起，我们让您失望了，请您提出宝贵意见，让我们进步！</string>
    <string name="edit_contact">您的联系方式：QQ/手机号</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="defaultString">默认</string>
</resources>
